Trouble-shooting the application

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.3.0",
-    "@supabase/supabase-js": "^2.45.6",
+    "@supabase/supabase-js": "^2.45.5",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dependencies": "^0.0.1",
     "geist": "^1.2.1",
     "lucide-react": "^0.372.0",
     "next": "latest",
